src/objects/SFDC_Timecard__c.object
<CustomObject>
    <description>Timecards are submitted by Resources for completed work.</description>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Notes__c</fullName>
        <label>F Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_Notes__c</fullName>
        <label>Th Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Notes__c</fullName>
        <label>M Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N60000001VqrNEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N60000001VqrSEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sa_Notes__c</fullName>
        <label>Sa Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Su_Notes__c</fullName>
        <label>Su  Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <label>Submit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Notes__c</fullName>
        <label>T Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thu__c</fullName>
        <label>Thu</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_Notes__c</fullName>
        <label>W Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <label>Timecard</label>
    <listViews>
        <fullName>AllTimecards</fullName>
        <columns>NAME</columns>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Mon__c</columns>
        <columns>Tue__c</columns>
        <columns>Wed__c</columns>
        <columns>Thu__c</columns>
        <columns>Fri__c</columns>
        <columns>Submit__c</columns>
        <columns>Approve__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Timecards</label>
    </listViews>
    <listViews>
        <fullName>NotSubmitted</fullName>
        <columns>NAME</columns>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Mon__c</columns>
        <columns>Tue__c</columns>
        <columns>Wed__c</columns>
        <columns>Thu__c</columns>
        <columns>Fri__c</columns>
        <columns>Submit__c</columns>
        <columns>Approve__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not Submitted</label>
    </listViews>
    <listViews>
        <fullName>SubmittedApproved</fullName>
        <columns>NAME</columns>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Mon__c</columns>
        <columns>Tue__c</columns>
        <columns>Wed__c</columns>
        <columns>Thu__c</columns>
        <columns>Fri__c</columns>
        <columns>Submit__c</columns>
        <columns>Approve__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approve__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Submitted &amp; Approved</label>
    </listViews>
    <listViews>
        <fullName>SubmittedbutnotApproved</fullName>
        <columns>NAME</columns>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Mon__c</columns>
        <columns>Tue__c</columns>
        <columns>Wed__c</columns>
        <columns>Thu__c</columns>
        <columns>Fri__c</columns>
        <columns>Submit__c</columns>
        <columns>Approve__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approve__c</field>
            <operation>equals</operation>
        </filters>
        <label>Submitted but not Approved</label>
    </listViews>
    <nameField>
        <displayFormat>Timecard {000}</displayFormat>
        <label>Timecard#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>